tests/rosetta/out/Zig/averages-simple-moving-average.error
zig build error: exit status 1
/tmp/TestMochiZigGoldenaverages-simple-moving-average4025872389/001/prog.zig:15:29: error: use of undeclared identifier 'substring'
/tmp/TestMochiZigGoldenaverages-simple-moving-average4025872389/001/prog.zig:32:17: error: use of undeclared identifier 'substring'
/tmp/TestMochiZigGoldenaverages-simple-moving-average4025872389/001/prog.zig:84:9: error: local variable is never mutated
/tmp/TestMochiZigGoldenaverages-simple-moving-average4025872389/001/prog.zig:84:9: note: consider using 'const'
/tmp/TestMochiZigGoldenaverages-simple-moving-average4025872389/001/prog.zig:83:9: error: local variable is never mutated
/tmp/TestMochiZigGoldenaverages-simple-moving-average4025872389/001/prog.zig:83:9: note: consider using 'const'
/tmp/TestMochiZigGoldenaverages-simple-moving-average4025872389/001/prog.zig:71:9: error: local variable is never mutated
/tmp/TestMochiZigGoldenaverages-simple-moving-average4025872389/001/prog.zig:71:9: note: consider using 'const'
